package utils;

public interface Attempt {
    public Object run(Object arg) throws Exception;
}
